# rust-zkp-example

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yaml
proto/: zkp_auth.proto
src/client/: Cargo.toml  build.rs
src/client/src/: api.rs  main.rs
src/client/src/api/: grpc.rs
src/server/: Cargo.toml  build.rs
src/server/src/: api.rs  gateways.rs  main.rs
src/server/src/api/: auth.rs
src/server/src/domain/: auth.rs
src/server/src/domain/auth/: actions.rs  gateways.rs  verifier.rs
src/server/src/gateways/: auth.rs
