[package]
edition = "2021"
name    = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.7", features = ["derive"] }
num-bigint  = "0.4.4"
prost       = "0.12.1"
rand = "0.8.5"
tokio       = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tonic       = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
